Initialised NPM and added TailwindCSS

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 
     <title>TODO</title>
     
-    <link rel="stylesheet" href="styles.css">
+    <link href="{{url_for('static',filename='output.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='styles.css')}}" rel="stylesheet">
 </head>
 <body>
     <h1>TODO</h1>
