Set up tailwind

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,13 +16,15 @@
 <body>
     <h1>TODO</h1>
     <form action="/add" method="POST">
-        <textarea type="text" name="task" rows="4" columns="50" placeholder="Add a new task here" required></textarea>
+        <textarea type="text" name="task" rows="4" columns="50" placeholder="Add a new task here" required
+        class="shadow-xl"
+        ></textarea>
         <button type="submit">Add</button>
     </form>
     <ul>
         {% for task in tasks %}
             <li>
-                <p class="multiline">{{ task[1] }}</p>
+                <p class="multiline shadow-md text-center">{{ task[1] }}</p>
                 <a href="/delete/{{ task[0] }}">Delete</a>
             </li>
         {% endfor %}
